tests/test_assets/semantic/invalid/void_values/unary_operand.cog
does_nothing::() -> void {
}

test::() -> void {
    value := -does_nothing();
}